# stashbox

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml  test.py
stashbox_cache/: persistent_key.pkl
test-env/: pyvenv.cfg
test-env/Scripts/: activate  activate.bat
