[tool.poetry]
name = "stashbox"
version = "0.1.0"
description = "A minimal data storage and retrieval library."
authors = ["retzilience <contato@retzilience.xyz>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Retzilience/stashbox"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
